# autovpn

./: .gitignore  Procfile  README.md  pyproject.toml  render.yaml  requirements.txt  run.py
automations/: create_utunnel_automation.py
autovpn/: __init__.py  cli.py  main.py
autovpn/api/: __init__.py  admin.py  auth.py  routes.py  user.py
autovpn/automation/: __init__.py  engine.py
autovpn/core/: __init__.py  config.py  database.py  rate_limiter.py  security.py  tasks.py
autovpn/models/: __init__.py  app_password.py  automation.py  generation_request.py  user_login.py
autovpn/web/: __init__.py  routes.py
autovpn/web/templates/: admin.html  base.html  index.html  test_conversion.html  user.html
scripts/: __init__.py  create_utunnel_automation.py  setup_sample_data.py  test_delete_functionality.py  test_puppeteer_setup.py  test_utunnel_automation.py
