[tool.poetry]
name = "autovpn"
version = "0.1.0"
description = "Automated VPN profile creation from websites"
authors = ["Nadeem Ashraf <dev.nadeemashraf06@gmail.com>"]
readme = "README.md"
packages = [{ include = "autovpn" }]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.104.1"
uvicorn = { extras = ["standard"], version = "^0.24.0" }
sqlmodel = "^0.0.14"
pyppeteer = "^1.0.2"
pandas = "^2.1.3"
openpyxl = "^3.1.2"
python-multipart = "^0.0.6"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = "^1.7.4"
bcrypt = "^3.2.2"
jinja2 = "^3.1.2"
aiofiles = "^23.2.1"
pydantic-settings = "^2.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py313']

[tool.isort]
profile = "black"
line_length = 88
